--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>ワークショップアンケート</title>
+  <title>アンケート</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <h1>ワークショップ アンケート</h1>
+  <h1>アンケート</h1>
 
   <form id="form">
     <label>今日のワークショップであなたが演じた人を教えてください：</label><br>
@@ -22,13 +22,13 @@
       <option value="H">Ｈさん</option>
     </select><br><br>
 
-    <label>あなたが演じた人は、納得のいく話し合いができたと思いますか？</label><br>
-    <input type="radio" name="discussion" value="agree" required> 納得できた<br>
-    <input type="radio" name="discussion" value="disagree"> 納得できなかった<br><br>
+    <label>あなたが演じた人は「納得のいく話し合いができたと感じている」と思いますか？</label><br>
+    <input type="radio" name="discussion" value="agree" required> 自分が演じた人は、話し合いに納得していると思う<br>
+    <input type="radio" name="discussion" value="disagree"> 自分が演じた人は、話し合いに納得していないと思う<br><br>
 
-    <label>あなたが演じた人は、最終決定に満足していますか？</label><br>
-    <input type="radio" name="satisfaction" value="agree" required> 満足している<br>
-    <input type="radio" name="satisfaction" value="disagree"> 満足していない<br><br>
+    <label>あなたが演じた人は「最終的な決定に満足している」と思います？</label><br>
+    <input type="radio" name="satisfaction" value="agree" required> 自分が演じた人は、最終的な決定に満足すると思う<br>
+    <input type="radio" name="satisfaction" value="disagree"> 自分が演じた人は、最終的な決定に満足しないと思う<br><br>
 
     <button type="submit">送信</button>
   </form>
