--- a/index.html
+++ b/index.html
@@ -30,30 +30,45 @@
     <input type="radio" name="satisfaction" value="agree" required> 自分が演じた人は、最終的な決定に満足すると思う<br>
     <input type="radio" name="satisfaction" value="disagree"> 自分が演じた人は、最終的な決定に満足しないと思う<br><br>
 
-    <button type="submit">送信</button>
+    <button type="submit" id="submit-button">送信</button>
   </form>
 
   <p id="message"></p>
 
   <script>
     const form = document.getElementById("form");
+    const submitButton = document.getElementById("submit-button");
+    const message = document.getElementById("message");
+
     form.addEventListener("submit", async e => {
       e.preventDefault();
+
+      // 二重送信防止：ボタンを無効化
+      submitButton.disabled = true;
+      message.innerText = "送信中です...";
+
       const formData = new FormData(form);
       const data = Object.fromEntries(formData.entries());
 
-      const response = await fetch("https://script.google.com/macros/s/AKfycbzs2cyjcPg_zV0PEhsREE3Rt1fKea3ThSZ-W7JQRNrv5P9kI8UCVzqfSd6NTLA-SG7W/exec", {
-        method: "POST",
-        body: JSON.stringify(data),
-        headers: { "Content-Type": "application/json" }
-      });
+      try {
+        const response = await fetch("https://script.google.com/macros/s/AKfycbzs2cyjcPg_zV0PEhsREE3Rt1fKea3ThSZ-W7JQRNrv5P9kI8UCVzqfSd6NTLA-SG7W/exec", {
+          method: "POST",
+          body: JSON.stringify(data),
+          headers: { "Content-Type": "application/json" }
+        });
 
-      if (response.ok) {
-        document.getElementById("message").innerText = "送信しました。ご協力ありがとうございました！";
-        form.reset();
-      } else {
-        document.getElementById("message").innerText = "送信に失敗しました。";
+        if (response.ok) {
+          message.innerText = "送信しました。ご協力ありがとうございました！";
+          form.reset();
+        } else {
+          message.innerText = "送信に失敗しました。もう一度お試しください。";
+        }
+      } catch (error) {
+        message.innerText = "エラーが発生しました。ネットワークをご確認ください。";
       }
+
+      // ボタンを再び有効化（必要に応じて外すことも可能）
+      submitButton.disabled = false;
     });
   </script>
 </body>
